Add gradle as build tool and organise code